src/objects/DataLoad__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>personname__c</fullName>
        <label>personname</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>DataLoad</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DataLoad Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataLoad</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>